--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,15 @@
-h1, h2, h3, h4, h5, h6 {
-    line-height: 1.3em;
-  }
+ h1, h2, h3, h4, h5, h6 {
+    line-height: 1em;
+  }  
   
-  h2 {
-    margin-bottom: 2em;
+  h1 {
+      font-size: 28px
   }
   
   h3 {
-    font-size: 2em;
-  }
+    font-size: 40px;
+    margin: 0.5em;
+  } 
   
   .section {
     min-height: 100vh;
@@ -25,8 +26,8 @@ h1, h2, h3, h4, h5, h6 {
     font-family: Helvetica, Arial, sans-serif;
     font-size: 16px;
     line-height: 20px;
-    color: #4a4a4a;
-    background-color: #e9e9f1;
+    color:white;
+    background-color: #1D6C93;
     scroll-behavior: smooth;
   }
   
