--- a/src/components/checkout/Checkout.css
+++ b/src/components/checkout/Checkout.css
@@ -16,3 +16,10 @@
     margin-bottom: 3em;
     background-color: #e7e6e4;
 }
+
+@media screen and (max-width: 600px) {
+    .tag-free-delivery{
+        margin-bottom: 1em
+    }
+
+  }
