--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
   h3 {
     font-size: 40px;
     margin-top: 2em;
-    margin-bottom: 0em;
+    margin-bottom: 0;
   } 
   
   .section {
@@ -25,7 +25,6 @@
   
   body {
     font-family: Helvetica, Arial, sans-serif;
-    font-size: 16px;
     line-height: 20px;
     color:white;
     background-color: #1D6C93;
@@ -44,7 +43,3 @@
     width: 100%;
   }
   
-  .row-title {
-    text-align: center;
-    margin-bottom: 1em;
-  }
