--- a/src/components/checkout/Checkout.css
+++ b/src/components/checkout/Checkout.css
@@ -1,25 +1,25 @@
 .card-checkout {
-    background-color: #F0F0F0;
-    color: #1D6C93;
-    flex-basis: 0;
-    flex-grow: 1;
-    max-width: 50%; 
-    justify-content: center;
-    text-align: left; 
-    margin: 2em;
-    padding: 2em;
-    border: 4px transparent;
-    border-radius: 4px;
+  background-color: #f0f0f0;
+  color: #1d6c93;
+  flex-basis: 0;
+  flex-grow: 1;
+  max-width: 30%;
+  justify-content: center;
+  text-align: center;
+  margin: 2em;
+  padding: 2em;
+  border: 4px transparent;
+  border-radius: 4px;
 }
 .tag-free-delivery {
-    font-size: 20px;
-    margin-bottom: 3em;
-    background-color: #e7e6e4;
+  font-size: 20px;
+  margin-bottom: 1em;
+  background-color: #e7e6e4;
 }
 
-@media screen and (max-width: 600px) {
-    .tag-free-delivery{
-        margin-bottom: 1em
-    }
 
+@media screen and (max-width: 600px) {
+  .card-checkout {
+    max-width: 75%;
   }
+}
