--- a/src/components/deliverybtn/Deliverybtn.css
+++ b/src/components/deliverybtn/Deliverybtn.css
@@ -1,7 +1,7 @@
 .deliverybtn {
   border: 2px solid #1d6c93;
   border-radius: 4px;
-  box-shadow: 0 1px 10px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.3);
   cursor: pointer;
 }
 .delivery-open-calendarbtn {
@@ -36,22 +36,47 @@
   border-radius: 0.2em;
   text-align: left;
   font-size: 18px;
-  margin: -0.5em 2em 0 0;
+  margin: -1em 3em 0 0;
   padding: 0 0.5em;
 }
 .van-img {
-  margin-right: 0.5em
+  margin-right: 0.5em;
 }
 
-@media screen and (max-width: 600px) {
-  .open-calendarbtn {
+.delivery-day {
+  position: absolute;
+  left: 80%;
+  top: 25%;
+  font-size: 18px;
+  font-weight: 450;
+}
+.calendar-img {
+  margin-top: 0;
+  height: 2.5rem;
+}
+
+.delivery-change{
+  font-size: 20px;
+  margin: 0 0.1em 0;
+  text-decoration-line: underline;
+
+}
+/* @media screen and (max-width: 600px) {
+  .delivery-open-calendarbtn {
     flex-direction: column;
     justify-content: center;
   }
 
-  .open-calendarbtn a {
+  .delivery-flex {
     justify-content: center;
-    margin: 0%;
+    align-items: center;
+    margin: 0;
     padding: 0;
   }
-}
+
+  .deliverybtn {
+    margin-right: 3em;
+    margin-left: -1em;
+    padding: 0px;
+  }
+} */
