--- a/src/components/deliverybtn/Deliverybtn.css
+++ b/src/components/deliverybtn/Deliverybtn.css
@@ -5,8 +5,6 @@
   cursor: pointer;
 }
 .delivery-open-calendarbtn {
-  margin: 0;
-  padding: 0;
   display: flex;
   justify-content: space-between;
   flex-wrap: nowrap;
@@ -15,7 +13,6 @@
 
 .delivery-flex {
   background: white;
-  padding: 0.4em; 
   margin: auto;
   color: #1d6c93;
   text-decoration: none;
@@ -26,7 +23,7 @@
 .delivery-selected-date {
   font-size: 20px;
   text-align: left;
-  margin-right: 1em;
+  margin: 1em 0 1.2em 0.5em;
 }
 
 .delivery-earliest {
@@ -35,7 +32,7 @@
   border-radius: 0.2em;
   text-align: left;
   font-size: 18px;
-  margin: -1em 3em 0.5em 0;
+  margin: -1em 4em 0.5em 0.5em;
   padding: 0.4em;
 }
 .van-img {
@@ -51,7 +48,6 @@
 }
 .calendar-img {
   height: 2.5rem;
-  /* background-color: white; */
 }
 
 .delivery-change {
@@ -62,9 +58,8 @@
 
 .delivery-calendar-change { 
   background-color: #c9dbe8;
-  /* margin: 0; */
-  /* display: inline-block; */
   border-bottom-left-radius: 25%;
   border-top-left-radius: 25%;
   height: 6.5em;
+  padding-left: 1em;
 }   
