--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,12 @@
     url("./fonts/GT-Pressura-Regular.woff") format("woff"),
     url("./fonts/GTPressuraMono.woff") format("woff");
 }
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 body {
   font-family: "MyFontBB", Helvetica, Arial, sans-serif;
   line-height: 20px;
@@ -23,7 +29,7 @@ h6 {
 }
 
 h1 {
-  font-size: 28px; 
+  font-size: 28px;
   text-align: left;
 }
 
