--- a/src/components/checkout/Checkout.css
+++ b/src/components/checkout/Checkout.css
@@ -14,15 +14,21 @@
 
 .tag-free-delivery {
   font-size: 20px;
-  margin: 0.5em 6.7em 1.5em 0;
+  margin: 0.5em 7.5em 1.5em 0;
   padding: 0.5em;
   background-color: #e7e6e4;
   border-radius: 0.2em;
   text-align: left;
+  font-family: "GTPressuraRegular"
 }
 
 @media screen and (max-width: 600px) {
   .card-checkout {
     max-width: 75%;
+  }
+  .tag-free-delivery{
+    margin-top: 1em;
+    margin-right: -1em;
+    padding: 0;
   }
 }
