--- a/src/components/deliverybtn/Deliverybtn.css
+++ b/src/components/deliverybtn/Deliverybtn.css
@@ -3,63 +3,71 @@
   border-radius: 4px;
   box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.3);
   cursor: pointer;
+  padding: 0;
 }
 .delivery-open-calendarbtn {
   display: flex;
-  justify-content: space-between;
-  flex-wrap: nowrap;
+  align-items: stretch;
+  justify-content: stretch;
   width: 100%;
-}
-
-.delivery-flex {
   background: white;
+}
+.delivery-flex {
+  flex: 1;
   margin: auto;
   color: #1d6c93;
   text-decoration: none;
-  flex-grow: 1;
   text-align: center;
 }
-
 .delivery-selected-date {
   font-size: 20px;
   text-align: left;
   margin: 1em 0 1.2em 0.5em;
+  font-family: "GTPressuraRegular";
 }
-
 .delivery-earliest {
   display: flex;
-  background-color: #EEF7F1;
+  background-color: #eef7f1;
   border-radius: 0.2em;
   text-align: left;
   font-size: 18px;
   margin: -1em 4em 0.5em 0.5em;
   padding: 0.4em;
 }
+
 .van-img {
   margin-right: 0.5em;
 }
-
-.delivery-day {
-  position: absolute;
-  left: 80%;
-  top: 28%;
-  font-size: 18px;
-  font-weight: 450;
-}
-.calendar-img {
-  height: 2.5rem;
-}
-
-.delivery-change {
-  font-size: 18px;
-  margin: 0.3em 0.1em 0;
-  text-decoration-line: underline;
-}
-
-.delivery-calendar-change { 
+.delivery-flex-calendar .delivery-calendar-change {
   background-color: #c9dbe8;
   border-bottom-left-radius: 25%;
   border-top-left-radius: 25%;
-  height: 6.5em;
+  height: 100%;
   padding-left: 1em;
-}   
+}
+.delivery-flex-calendar
+  .delivery-calendar-change
+  .delivery-calendar-change-image {
+  position: relative;
+}
+.delivery-day {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -20%);
+  font-size: 18px;
+  font-weight: 450;
+  color: #1d6c93;
+}
+.calendar-img {
+  height: 2.5rem;
+  margin-top: 0.8em;
+}
+.delivery-change {
+  font-size: 18px;
+  margin: 0.5em 0.1em 0;
+  text-decoration-line: underline;
+  color: #1d6c93;
+  font-weight: 600;
+  font-family: "GTPressuraMono";
+}
