--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -20,7 +20,7 @@ header {
   margin: 16px 18px;
   font-family: "Pacifico", cursive;
   font-size: 18px;
-  color: #4a4a4a;;
+  color: #4a4a4a;
 }
 
 .bb-logo {
